// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Suite Should match the snapshot when a card is found 1`] = `
<DocumentFragment>
  <div>
    <div
      card="[object Object]"
    >
      CardDisplay
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home Suite Should match the snapshot when more than one card is found 1`] = `
<DocumentFragment>
  <div>
    More than one card found
  </div>
</DocumentFragment>
`;

exports[`Home Suite Should match the snapshot when no card is found 1`] = `
<DocumentFragment>
  <div>
    no cards found for search adrix and nev
  </div>
</DocumentFragment>
`;

exports[`Home Suite Should match the snapshot when there is no card in the history 1`] = `
<DocumentFragment>
  <div>
    loading
  </div>
</DocumentFragment>
`;
